added funding announcement

--- a/website/index.html
+++ b/website/index.html
@@ -173,6 +173,54 @@ is at stake?</p>
 <div id="home">
 <div class="first-column">
 
+<h2>$150 million investment from Andreessen Horowitz!</h2>
+
+<p>We are extremely excited to announce our new funding from some
+long time friends in venture capital, Andreessen Horowitz. They lead
+a $150 million dollar private equity round at a $52 billion dollar
+valuation, which we will use to start generating revenue and take our
+software to the next level.</p>
+
+<p class="c"><img src="index_files/stallman-quote.jpg"></p>
+
+<p>As part of this deal, we will begin to add per-use fees to many of
+the popular GNU software we maintain, such as "ls", "dd", "cat", "grep", and
+many more. You can check out our pricing update and documentation on
+<a href="https://github.com/diafygi/gnu-pricing" target="_blank">Github</a>.
+Supported tools now include a "--pricing" flag so you can keep track of how
+</p>
+
+<p style="font-size:20px;font-style:italic;margin-bottom:1px;">
+"GNU is sitting on a hundred billion dollar opportunity, and I'm really excited
+they are capitalizing on it."
+</p>
+<p style="font-size:16px;font-style:italic;text-align:right;margin-top:1px;">
+-Sam Altman, YCombinator
+</p>
+
+<p>Thanks very much to all of our current contributers that have made this step
+possible. If it weren't for the hard work of you, we wouldn't be able have such
+an incredible position in the market and rich go-to-market strategy. As part of
+this fundrasing, we will be setting aside 10% of the investment to give back to
+the community that have made us so very, very happy.
+</p>
+
+<p style="font-size:20px;font-style:italic;margin-bottom:1px;">
+"They got embedded in all the huge enterprise companies on the backs of
+volunteers! Now they can flip on the revenue stream. I really respect Richard
+for his cutthroat business strategy."
+</p>
+<p style="font-size:16px;font-style:italic;text-align:right;margin-top:1px;">
+-Larry Ellison, Oracle
+</p>
+
+<p>Unfortunately, some long time friends in the Linux community will not be
+joining us in our journey, namely the Linux kernel, so we will be using $50
+million from this funding to complete the GNU Hurd kernel on an accelerated
+timeline so that our current users don't experience any interruption of service.
+</p>
+
+
 <h2>What is GNU?</h2>
 
 <p>GNU is an operating system that
