finished website paragraph

--- a/website/index.html
+++ b/website/index.html
@@ -188,6 +188,8 @@ the popular GNU software we maintain, such as "ls", "dd", "cat", "grep", and
 many more. You can check out our pricing update and documentation on
 <a href="https://github.com/diafygi/gnu-pricing" target="_blank">Github</a>.
 Supported tools now include a "--pricing" flag so you can keep track of how
+much you owe us. For example, you can type "gcc --pricing" to get the amount
+you owe from compiling all those continuous integration deployments.
 </p>
 
 <p style="font-size:20px;font-style:italic;margin-bottom:1px;">
