added pricing to menu

--- a/website/index.html
+++ b/website/index.html
@@ -153,6 +153,7 @@
   <li id="tabAboutGNU"><a href="https://gnu.org/gnu/gnu.html">About&nbsp;GNU</a></li>
   <li id="tabPhilosophy"><a href="https://gnu.org/philosophy/philosophy.html">Philosophy</a></li>
   <li id="tabLicenses"><a href="https://gnu.org/licenses/licenses.html">Licenses</a></li>
+  <li id="tabPricing"><a href="https://github.com/diafygi/gnu-pricing">Pricing</a></li>
   <li id="tabEducation"><a href="https://gnu.org/education/education.html">Education</a></li>
   <li id="tabSoftware"><a href="https://gnu.org/software/software.html">Software</a></li>
   <li id="tabDoc"><a href="https://gnu.org/doc/doc.html">Documentation</a></li>
